force-app/main/default/objects/KT_to_Campaign__c/KT_to_Campaign__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>KT to Campaign</label>
</CustomObject>