force-app/main/default/objects/KT_to_Campaign__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Asset ID</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>