force-app/main/default/objects/KT_to_Campaign__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign SFDC Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>